--- a/project/Local.scala.example
+++ b/project/Local.scala.example
@@ -5,6 +5,8 @@ import sbtprotobuf.{ProtobufPlugin=>PB}
 object LocalBuild extends Build {
   override lazy val settings = super.settings ++ Seq(
     javaOptions ++= Seq(
+      "-Dtrace.in.directory=/work/charles/clusertrace3",
+      "-Dtrace.processed.directory=/work/charles/clustertrace-resharded",
       "-Dspark.diskSpillingCache.cacheDir=/itch/charles-tmp",
       "-Dspark.boundedMemoryCache.memoryFraction=0.30",
       "-Dspark.default.parallelism=100",
